# controllers/formulario_programa.go
@@ -11,13 +11,13 @@ import (
 	"github.com/udistrital/utils_oas/formatdata"
 )
 
-// TipoEstadoController operations for TipoEstado
-type TipoEstadoController struct {
+// FormularioProgramaController operations for FormularioPrograma
+type FormularioProgramaController struct {
 	beego.Controller
 }
 
 // URLMapping ...
-func (c *TipoEstadoController) URLMapping() {
+func (c *FormularioProgramaController) URLMapping() {
 	c.Mapping("Post", c.Post)
 	c.Mapping("GetOne", c.GetOne)
 	c.Mapping("GetAll", c.GetAll)
@@ -27,15 +27,15 @@ func (c *TipoEstadoController) URLMapping() {
 
 // Post ...
 // @Title Post
-// @Description create TipoEstado
-// @Param	body		body 	models.TipoEstado	true		"body for TipoEstado content"
-// @Success 201 {int} models.TipoEstado
+// @Description create FormularioPrograma
+// @Param	body		body 	models.FormularioPrograma	true		"body for FormularioPrograma content"
+// @Success 201 {int} models.FormularioPrograma
 // @Failure 403 body is empty
 // @router / [post]
-func (c *TipoEstadoController) Post() {
-	var v models.TipoEstado
+func (c *FormularioProgramaController) Post() {
+	var v models.FormularioPrograma
 	if err := json.Unmarshal(c.Ctx.Input.RequestBody, &v); err == nil {
-		if _, err := models.AddTipoEstado(&v); err == nil {
+		if _, err := models.AddFormularioPrograma(&v); err == nil {
 			c.Ctx.Output.SetStatus(201)
 			c.Data["json"] = models.Alert{Type: "success", Code: "S_201", Body: v}
 			//c.Ctx.Output.SetStatus(201)
@@ -57,15 +57,15 @@ func (c *TipoEstadoController) Post() {
 
 // GetOne ...
 // @Title Get One
-// @Description get TipoEstado by id
+// @Description get FormularioPrograma by id
 // @Param	id		path 	string	true		"The key for staticblock"
-// @Success 200 {object} models.TipoEstado
+// @Success 200 {object} models.FormularioPrograma
 // @Failure 403 :id is empty
 // @router /:id [get]
-func (c *TipoEstadoController) GetOne() {
+func (c *FormularioProgramaController) GetOne() {
 	idStr := c.Ctx.Input.Param(":id")
 	id, _ := strconv.Atoi(idStr)
-	v, err := models.GetTipoEstadoById(id)
+	v, err := models.GetFormularioProgramaById(id)
 	if err != nil {
 		c.Data["json"] = models.Alert{Type: "error", Code: "E_400", Body: err.Error()}
 		//c.Data["json"] = err.Error()
@@ -77,17 +77,17 @@ func (c *TipoEstadoController) GetOne() {
 
 // GetAll ...
 // @Title Get All
-// @Description get TipoEstado
+// @Description get FormularioPrograma
 // @Param	query	query	string	false	"Filter. e.g. col1:v1,col2:v2 ..."
 // @Param	fields	query	string	false	"Fields returned. e.g. col1,col2 ..."
 // @Param	sortby	query	string	false	"Sorted-by fields. e.g. col1,col2 ..."
 // @Param	order	query	string	false	"Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ..."
 // @Param	limit	query	string	false	"Limit the size of result set. Must be an integer"
 // @Param	offset	query	string	false	"Start position of result set. Must be an integer"
-// @Success 200 {object} models.TipoEstado
+// @Success 200 {object} models.FormularioPrograma
 // @Failure 403
 // @router / [get]
-func (c *TipoEstadoController) GetAll() {
+func (c *FormularioProgramaController) GetAll() {
 	var fields []string
 	var sortby []string
 	var order []string
@@ -130,7 +130,7 @@ func (c *TipoEstadoController) GetAll() {
 		}
 	}
 
-	l, err := models.GetAllTipoEstado(query, fields, sortby, order, offset, limit)
+	l, err := models.GetAllFormularioPrograma(query, fields, sortby, order, offset, limit)
 	if err != nil {
 		c.Data["json"] = models.Alert{Type: "error", Code: "E_400", Body: err.Error()}
 		//c.Data["json"] = err.Error()
@@ -142,18 +142,18 @@ func (c *TipoEstadoController) GetAll() {
 
 // Put ...
 // @Title Put
-// @Description update the TipoEstado
+// @Description update the FormularioPrograma
 // @Param	id		path 	string	true		"The id you want to update"
-// @Param	body		body 	models.TipoEstado	true		"body for TipoEstado content"
-// @Success 200 {object} models.TipoEstado
+// @Param	body		body 	models.FormularioPrograma	true		"body for FormularioPrograma content"
+// @Success 200 {object} models.FormularioPrograma
 // @Failure 403 :id is not int
 // @router /:id [put]
-func (c *TipoEstadoController) Put() {
+func (c *FormularioProgramaController) Put() {
 	idStr := c.Ctx.Input.Param(":id")
 	id, _ := strconv.Atoi(idStr)
-	v := models.TipoEstado{Id: id}
+	v := models.FormularioPrograma{Id: id}
 	if err := json.Unmarshal(c.Ctx.Input.RequestBody, &v); err == nil {
-		if err := models.UpdateTipoEstadoById(&v); err == nil {
+		if err := models.UpdateFormularioProgramaById(&v); err == nil {
 			c.Ctx.Output.SetStatus(200)
 			c.Data["json"] = models.Alert{Type: "success", Code: "S_200", Body: v}
 			//c.Data["json"] = "OK"
@@ -174,15 +174,15 @@ func (c *TipoEstadoController) Put() {
 
 // Delete ...
 // @Title Delete
-// @Description delete the TipoEstado
+// @Description delete the FormularioPrograma
 // @Param	id		path 	string	true		"The id you want to delete"
 // @Success 200 {string} delete success!
 // @Failure 403 id is empty
 // @router /:id [delete]
-func (c *TipoEstadoController) Delete() {
+func (c *FormularioProgramaController) Delete() {
 	idStr := c.Ctx.Input.Param(":id")
 	id, _ := strconv.Atoi(idStr)
-	if err := models.DeleteTipoEstado(id); err == nil {
+	if err := models.DeleteFormularioPrograma(id); err == nil {
 		c.Data["json"] = models.Alert{Type: "success", Code: "S_200", Body: "OK"}
 		//c.Data["json"] = "OK"
 	} else {
