# swagger/swagger.yml
@@ -11,12 +11,12 @@ info:
     url: http://www.apache.org/licenses/LICENSE-2.0.html
 basePath: /v1
 paths:
-  /campo/:
+  /campo_programa/:
     get:
       tags:
-      - campo
-      description: get Campo
-      operationId: CampoController.Get All
+      - campo_programa
+      description: get CampoPrograma
+      operationId: CampoProgramaController.Get All
       parameters:
       - in: query
         name: query
@@ -47,32 +47,32 @@ paths:
         "200":
           description: ""
           schema:
-            $ref: '#/definitions/models.Campo'
+            $ref: '#/definitions/models.CampoPrograma'
         "403":
           description: ""
     post:
       tags:
-      - campo
-      description: create Campo
-      operationId: CampoController.Post
+      - campo_programa
+      description: create CampoPrograma
+      operationId: CampoProgramaController.Post
       parameters:
       - in: body
         name: body
-        description: body for Campo content
+        description: body for CampoPrograma content
         required: true
         schema:
-          $ref: '#/definitions/models.Campo'
+          $ref: '#/definitions/models.CampoPrograma'
       responses:
         "201":
-          description: '{int} models.Campo'
+          description: '{int} models.CampoPrograma'
         "403":
           description: body is empty
-  /campo/{id}:
+  /campo_programa/{id}:
     get:
       tags:
-      - campo
-      description: get Campo by id
-      operationId: CampoController.Get One
+      - campo_programa
+      description: get CampoPrograma by id
+      operationId: CampoProgramaController.Get One
       parameters:
       - in: path
         name: id
@@ -83,14 +83,14 @@ paths:
         "200":
           description: ""
           schema:
-            $ref: '#/definitions/models.Campo'
+            $ref: '#/definitions/models.CampoPrograma'
         "403":
           description: :id is empty
     put:
       tags:
-      - campo
-      description: update the Campo
-      operationId: CampoController.Put
+      - campo_programa
+      description: update the CampoPrograma
+      operationId: CampoProgramaController.Put
       parameters:
       - in: path
         name: id
@@ -99,22 +99,22 @@ paths:
         type: string
       - in: body
         name: body
-        description: body for Campo content
+        description: body for CampoPrograma content
         required: true
         schema:
-          $ref: '#/definitions/models.Campo'
+          $ref: '#/definitions/models.CampoPrograma'
       responses:
         "200":
           description: ""
           schema:
-            $ref: '#/definitions/models.Campo'
+            $ref: '#/definitions/models.CampoPrograma'
         "403":
           description: :id is not int
     delete:
       tags:
-      - campo
-      description: delete the Campo
-      operationId: CampoController.Delete
+      - campo_programa
+      description: delete the CampoPrograma
+      operationId: CampoProgramaController.Delete
       parameters:
       - in: path
         name: id
@@ -126,12 +126,12 @@ paths:
           description: '{string} delete success!'
         "403":
           description: id is empty
-  /formulario/:
+  /formulario_programa/:
     get:
       tags:
-      - formulario
-      description: get Formulario
-      operationId: FormularioController.Get All
+      - formulario_programa
+      description: get FormularioPrograma
+      operationId: FormularioProgramaController.Get All
       parameters:
       - in: query
         name: query
@@ -162,32 +162,32 @@ paths:
         "200":
           description: ""
           schema:
-            $ref: '#/definitions/models.Formulario'
+            $ref: '#/definitions/models.FormularioPrograma'
         "403":
           description: ""
     post:
       tags:
-      - formulario
-      description: create Formulario
-      operationId: FormularioController.Post
+      - formulario_programa
+      description: create FormularioPrograma
+      operationId: FormularioProgramaController.Post
       parameters:
       - in: body
         name: body
-        description: body for Formulario content
+        description: body for FormularioPrograma content
         required: true
         schema:
-          $ref: '#/definitions/models.Formulario'
+          $ref: '#/definitions/models.FormularioPrograma'
       responses:
         "201":
-          description: '{int} models.Formulario'
+          description: '{int} models.FormularioPrograma'
         "403":
           description: body is empty
-  /formulario/{id}:
+  /formulario_programa/{id}:
     get:
       tags:
-      - formulario
-      description: get Formulario by id
-      operationId: FormularioController.Get One
+      - formulario_programa
+      description: get FormularioPrograma by id
+      operationId: FormularioProgramaController.Get One
       parameters:
       - in: path
         name: id
@@ -198,14 +198,14 @@ paths:
         "200":
           description: ""
           schema:
-            $ref: '#/definitions/models.Formulario'
+            $ref: '#/definitions/models.FormularioPrograma'
         "403":
           description: :id is empty
     put:
       tags:
-      - formulario
-      description: update the Formulario
-      operationId: FormularioController.Put
+      - formulario_programa
+      description: update the FormularioPrograma
+      operationId: FormularioProgramaController.Put
       parameters:
       - in: path
         name: id
@@ -214,22 +214,22 @@ paths:
         type: string
       - in: body
         name: body
-        description: body for Formulario content
+        description: body for FormularioPrograma content
         required: true
         schema:
-          $ref: '#/definitions/models.Formulario'
+          $ref: '#/definitions/models.FormularioPrograma'
       responses:
         "200":
           description: ""
           schema:
-            $ref: '#/definitions/models.Formulario'
+            $ref: '#/definitions/models.FormularioPrograma'
         "403":
           description: :id is not int
     delete:
       tags:
-      - formulario
-      description: delete the Formulario
-      operationId: FormularioController.Delete
+      - formulario_programa
+      description: delete the FormularioPrograma
+      operationId: FormularioProgramaController.Delete
       parameters:
       - in: path
         name: id
@@ -357,21 +357,28 @@ paths:
         "403":
           description: id is empty
 definitions:
-  models.Campo:
-    title: Campo
+  models.CampoPrograma:
+    title: CampoPrograma
     type: object
     properties:
+      Activo:
+        type: boolean
+      FechaModificacion:
+        type: string
+      FormularioPrograma:
+        $ref: '#/definitions/models.FormularioPrograma'
       Id:
         type: integer
         format: int64
-      IdFormulario:
-        $ref: '#/definitions/models.Formulario'
-      IdTipoEstado:
-        $ref: '#/definitions/models.TipoEstado'
-      NombreCampo:
+      Nombre:
         type: string
-  models.Formulario:
-    title: Formulario
+      Periodo:
+        type: integer
+        format: int64
+      TipoEstado:
+        $ref: '#/definitions/models.TipoEstado'
+  models.FormularioPrograma:
+    title: FormularioPrograma
     type: object
     properties:
       Activo:
@@ -379,6 +386,8 @@ definitions:
       CodigoAbreviacion:
         type: string
       Descripcion:
+        type: string
+      FechaModificacion:
         type: string
       Id:
         type: integer
@@ -388,6 +397,9 @@ definitions:
       NumeroOrden:
         type: number
         format: double
+      Programa:
+        type: integer
+        format: int64
   models.TipoEstado:
     title: TipoEstado
     type: object
@@ -397,6 +409,8 @@ definitions:
       CodigoAbreviacion:
         type: string
       Descripcion:
+        type: string
+      FechaModificacion:
         type: string
       Id:
         type: integer
@@ -410,9 +424,9 @@ tags:
 - name: tipo_estado
   description: |
     TipoEstadoController operations for TipoEstado
-- name: formulario
+- name: formulario_programa
   description: |
-    FormularioController operations for Formulario
-- name: campo
+    FormularioProgramaController operations for FormularioPrograma
+- name: campo_programa
   description: |
-    CampoController operations for Campo
+    CampoProgramaController operations for CampoPrograma
